# raw

./: Cargo.toml  LICENSE  README.md  justfile
src/: app.rs  args.rs  banner  buffer.rs  document.rs  editor.rs  event.rs  extension.rs  filetype.rs  highlighting.rs  lib.rs  main.rs  position.rs  render.rs  row.rs  screen.rs  terminal.rs  test  tui.rs
src/buffer/: banner.rs  statusline.rs  text.rs
src/extension/: graphemes.rs  rect.rs  rope.rs
src/render/: banner.rs  document.rs  extend.rs  message.rs  rect.rs  status_line.rs  switcher.rs  text.rs
src/v1/: document.rs  editor.rs  highlighting.rs  terminal.rs
src/v2/: app.rs  buffer.rs  event.rs  tui.rs
src/v2/buffer/: statusline.rs  text.rs
tests/: buffer_test.rs  filetype_test.rs  render_test.rs  rope.rs  terminal_test.rs
