[package]
name = "raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossterm]
version = "0.23"
features = ["event-stream"]

[dependencies.tui]
version = "0.18"

[dependencies.unicode-segmentation]
version = "1.9.0"

[dependencies.unicode-width]
version = "0.1.9"