[package]
name = "raw"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures-timer]
version = "3.0.2"

[dependencies.anyhow]
version = "1.0"

[dependencies.tui]
version = "0.18"

[dependencies.ropey]
version = "1.5"

[dependencies.encoding_rs]
version = "0.8.31"

[dependencies.tokio]
version = "1.20.0"
features =["full"]

[dependencies.crossterm]
version = "0.23"
features = ["event-stream"]

[dependencies.unicode-segmentation]
version = "1.9.0"

[dependencies.unicode-width]
version = "0.1.9"